<resources>

    <!-- App Name -->
    <string name="app_name">FitTrack</string>

    <!-- search -->
    <string name="search">Search something</string>

    <!-- Splash & Onboarding Screens -->
    <string name="get_started">Get Started</string>
    <string name="start_training">Start Training</string>

    <!-- Sign Up & Authentication -->
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="agree_privacy_policy">Agree with our Privacy and Policy.</string>

    <!-- Screen Titles -->
    <string name="account_information">Account Information</string>
    <string name="progress">Progress</string>
    <string name="activity">Activity</string>
    <string name="trainings">Trainings</string>
    <string name="summary">Summary</string>
    <string name="category">Category</string>
    <string name="training_history">Training History</string>
    <string name="profile">Profile</string>


    <!-- Workout Categories -->
    <string name="cardio">Cardio</string>
    <string name="yoga">Yoga</string>
    <string name="stretch">Stretch</string>
    <string name="gym">Gym</string>
    <string name="upper_body">Upper Body</string>
    <string name="running">Running</string>

    <string name="exercises">Exercises</string>
    <string name="workout">Workout</string>


    <!-- Profile Content -->
    <string name="account">Account</string>
    <string name="workouts">My workouts 🚀</string>
    <string name="reminder">Workout reminders</string>
    <string name="history">Tracking History</string>
    <string name="logout">Log out</string>


    <!-- Buttons Names -->
    <string name="finish">Finish</string>
    <string name="start">Start Workout</string>
    <string name="pause">Pause</string>
    <string name="premium">Premium</string>
    <string name="create">Create a Reminder</string>
    <string name="save">Save Workout</string>



</resources>
