<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryColor"
    tools:context=".profile">

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="49dp"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="118dp"
        android:layout_height="40dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="26dp"
        android:backgroundTint="@color/accentColor"
        android:text="@string/premium"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView32"
        app:srcCompat="@drawable/profile_img" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:text="Kesigan"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView23" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="35dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView33">

        <!-- Weight LinearLayout -->
        <LinearLayout
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:layout_marginStart="23dp"
            android:background="@drawable/category_bg"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView25"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                app:srcCompat="@drawable/weight" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="78 Kg"
                android:textAlignment="center"
                android:textColor="@color/secondaryColor" />
        </LinearLayout>

        <!-- Height LinearLayout -->
        <LinearLayout
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:layout_marginStart="23dp"
            android:background="@drawable/category_bg"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView26"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                app:srcCompat="@drawable/height" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:text="170 cm"
                android:textAlignment="center"
                android:textColor="@color/secondaryColor" />
        </LinearLayout>

        <!-- Birth LinearLayout -->
        <LinearLayout
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:layout_marginStart="23dp"
            android:background="@drawable/category_bg"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView27"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                app:srcCompat="@drawable/birth" />

            <TextView
                android:id="@+id/textView36"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="23 years"
                android:textAlignment="center"
                android:textColor="@color/secondaryColor" />
        </LinearLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/category_bg"
            android:orientation="vertical"
            android:padding="12dp">

            <!-- Menu Items -->
            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/account"
                    android:textColor="@color/secondaryColor"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_arrow_right" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/workouts"
                    android:textColor="@color/secondaryColor"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_arrow_right" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reminder"
                    android:textColor="@color/secondaryColor"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_arrow_right" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/layout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/progress"
                    android:textColor="@color/secondaryColor"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_arrow_right" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/logout"
                    android:textColor="@color/secondaryColor"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_arrow_right" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Bottom Navigation -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/primaryColor"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/homeIcon"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/home" />

        <ImageView
            android:id="@+id/trainingsIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="1dp"
            app:layout_constraintStart_toEndOf="@id/homeIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/trainings" />

        <ImageView
            android:id="@+id/activityIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="1dp"
            app:layout_constraintStart_toEndOf="@id/trainingsIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/activity" />

        <ImageView
            android:id="@+id/profileIcon"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="1dp"
            app:layout_constraintStart_toEndOf="@id/activityIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/profile1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
