<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/summary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryColor"
    tools:context=".summary">

    <!-- Back Button -->
    <ImageView
        android:id="@+id/leftArrow"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/left_arrow" />

    <!-- Summary Title -->
    <TextView
        android:id="@+id/textView82"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="26dp"
        android:text="@string/summary"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/leftArrow"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Workout Title -->
    <TextView
        android:id="@+id/textView83"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="32dp"
        android:text="@string/workout"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView82" />

    <!-- Workout Summary Box -->
    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="365dp"
        android:layout_height="64dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/category_bg"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView83">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="142dp"
            android:layout_height="61dp"
            android:layout_marginTop="3dp"
            app:srcCompat="@drawable/e5" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Upper Body Alternated"
                android:textColor="@color/secondaryColor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView45"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="08:30-09:15"
                android:textColor="@color/gray"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <!-- Workout Stats -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout2"
        android:layout_width="364dp"
        android:layout_height="173dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/category_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout1">

        <TextView
            android:id="@+id/textView84"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:text="00:45"
            android:textColor="@color/secondaryColor"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView85"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total Time"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/textView84"
            app:layout_constraintTop_toBottomOf="@id/textView84" />

        <TextView
            android:id="@+id/textView86"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_marginRight="50dp"
            android:text="164 bpm"
            android:textColor="@color/secondaryColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView87"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Avg Heart Rate"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/textView86"
            app:layout_constraintTop_toBottomOf="@id/textView86" />

        <TextView
            android:id="@+id/textView88"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="14dp"
            android:text="617 Kcal"
            android:textColor="@color/secondaryColor"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView85" />

        <TextView
            android:id="@+id/textView89"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Active Calories"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/textView88"
            app:layout_constraintTop_toBottomOf="@id/textView88" />

        <TextView
            android:id="@+id/textView90"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="236dp"
            android:layout_marginTop="20dp"
            android:text="652 Kcal"
            android:textColor="@color/secondaryColor"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView87" />

        <TextView
            android:id="@+id/textView91"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total Calories"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/textView90"
            app:layout_constraintTop_toBottomOf="@id/textView90" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Heart Rate Section -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="362dp"
        android:layout_height="161dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/category_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout2">

        <TextView
            android:id="@+id/textView92"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="10dp"
            android:text="Heart Rate"
            android:textColor="@color/secondaryColor"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView53"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView92"
            app:srcCompat="@drawable/heart_rate" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Save Workout Button -->
    <Button
        android:id="@+id/save"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/accentColor"
        android:text="@string/save"
        android:textColor="@color/secondaryColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
